plugins {
	id 'java'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
	}
	mavenCentral()
}

def runeLiteVersion = '1.12.10' // This version updates occasionally

dependencies {
	compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion


	compileOnly 'org.projectlombok:lombok:1.18.34'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'

	testImplementation 'junit:junit:4.12'
	testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
}

group = 'com.yourname'
version = '1.0-SNAPSHOT'

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.release.set(11) // RuneLite requires Java 11
}

tasks.register('runelite', JavaExec) {
	group = 'documentation'
	description = 'Runs the RuneLite client with this plugin loaded'
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.margeon.shoparbitrage.DevLauncher'
	args = ['--developer-mode', '--profile', 'dev-test']
	jvmArgs = [
			'-ea',
			'-Xmx512m',
			'-Xss2m',
			'-Drunelite.plugin.developer=true',
			'-Drunelite.launcher.reflect=true',
			'--add-opens=java.base/java.lang=ALL-UNNAMED',
			'--add-opens=java.base/java.net=ALL-UNNAMED',
			'--add-opens=java.base/java.nio.file=ALL-UNNAMED',
			'--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
			'--add-opens=java.desktop/sun.java2d.opengl=ALL-UNNAMED'
	]
}